@@ -43,7 +43,7 @@ public class ClientDemo extends JbootController {
 
         Jboot.setBootArg("jboot.rpc.type", "motan");
         Jboot.setBootArg("jboot.rpc.callMode", "redirect");//直连模式，默认为注册中心
-        Jboot.setBootArg("jboot.rpc.directUrl", "localhost:8002");//直连模式的url地址
+        Jboot.setBootArg("jboot.rpc.directUrl", "localhost:8000");//直连模式的url地址
 
 
         Jboot.setBootArg("jboot.tracing.type", "zipkin");//opentracing的类型
